# clashctl

./: Cargo.toml  README.md  README_CN.md  USAGE.md  install.sh  run.sh
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/app/: mod.rs  mode.rs  state.rs
src/clash/: client.rs  mod.rs  models.rs  types.rs
src/config/: clash_config.rs  mihomo_party.rs  mod.rs  preset.rs
src/ui/: mod.rs  theme.rs
src/ui/pages/: connections.rs  groups.rs  home.rs  logs.rs  mod.rs  performance.rs  routes.rs  routes_old.rs  rules.rs  settings.rs  update.rs
