[package]
name = "clashctl"
version = "0.1.1"
edition = "2021"
authors = ["clashctl contributors"]
description = "A simple-first TUI Clash controller"
license = "MIT"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
dirs = "5"
chrono = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
url = "2"
base64 = "0.21"
